# scorn

./: .gitignore  Cargo.toml  README.md  formatting.yaml
src/: main.rs  routes.rs
templates/: index_template.html  post_template.html
web_data/: blog.css  index.css
