[package]
name = "scorn"
version = "0.1.0"
edition = "2021"
description = "Lightweight blog engine with built-in Markdown-to-HTML converter"

repository = "https://github.com/jbruws/scorn"
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["blog", "engine", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
handlebars = "4"
